# MCU_ff

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
Inc/: main.h
python_parcer/: parser.py
python_parser/: parser.py
tracklib/: trackerinterface.lib
